--- a/package.json
+++ b/package.json
@@ -16,8 +16,10 @@
     "react-redux": "^8.1.1",
     "react-router-dom": "^5.3.4",
     "react-scripts": "^5.0.1",
+    "react-slick": "^0.29.0",
     "redux": "^4.2.1",
     "redux-thunk": "^2.4.2",
+    "slick-carousel": "^1.8.1",
     "validator": "^13.9.0"
   },
   "scripts": {
